page part testimonials mobile fix: box shadow bleeding below slide removed

--- a/src/scss/custom/partials/_page-parts.scss
+++ b/src/scss/custom/partials/_page-parts.scss
@@ -262,6 +262,8 @@
 
     &-inner {
       box-shadow: $box-shadow-standard;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
 
       @media (min-width: 768px) {
         margin-left: 5rem;
